# Kaggle-projects

./: Nuclei detection_Image analysis.ipynb  README.md
Crypto-forecasting/: exploration.ipynb  pyproject.toml
Customer Churn prediction/: README.md  churn_analysis.ipynb  cm_plot.py  data_prep.py  logistic_regression.py  model.py  multi_model.py  test.py
Customer Churn prediction/.ipynb_checkpoints/: churn_modeling-checkpoint.ipynb
Freesound Audio Classification/: .gitignore  README.md
Freesound Audio Classification/.ipynb_checkpoints/: EDA-checkpoint.ipynb
Nuclei detection/: README.md
Nuclei detection/.ipynb_checkpoints/: Nuclei detection_Image analysis-checkpoint.ipynb
otto-group-product-classification/: .gitignore  README.md  cnn.py  data_prep.py  fcn.py  test.ipynb
otto-group-product-classification/.ipynb_checkpoints/: network-checkpoint.ipynb  test-checkpoint.ipynb
otto-group-product-classification/best_mods/: best_model.01-0.63.h5  best_model.02-0.61.h5  best_model.03-0.60.h5  best_model.04-0.58.h5  best_model.05-0.57.h5  best_model.06-0.57.h5  best_model.09-0.57.h5  best_model.11-0.56.h5  best_model.14-0.56.h5  best_model.22-0.56.h5  best_model.32-0.55.h5
vsb-power-line-fault-detection/: .gitignore  attention.py  baselinemodel.py  feature_extraction.ipynb  read_datas.py  train.py  train_crossval.py  train_single.py  utilities.py  weights_0.h5  weights_1.h5  weights_2.h5  weights_3.h5  weights_4.h5
vsb-power-line-fault-detection/nbs/: feature_extraction.ipynb  training.ipynb
