[tool.poetry]
name = "crypto-forecasting"
version = "0.1.0"
description = "G-Research Crypto Forecasting"
authors = ["venkat-rajgopal <venkatramani.r@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.3.4"
numpy = "^1.21.4"
matplotlib = "^3.4.3"
plotly = "^5.3.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
